--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>The Signal in the Noise — Nico Lafakis</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700&family=DM+Sans:wght@300;400;500&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/src/style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
 
@@ -380,6 +380,6 @@
   <p class="footer-note">This report is part of an ongoing series examining how emerging technologies are reshaping economic systems, human behavior, and the nature of value creation. All statistics cited are sourced from publicly available research published between 2024 and 2025.</p>
 </footer>
 
-<script type="module" src="/src/main.js"></script>
+<script src="/main.js"></script>
 </body>
 </html>
