fix: update year in footer and add LinkedIn link to footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <nav>
-  <span class="nav-brand">Lafakis / 2025</span>
+  <span class="nav-brand">Lafakis / 2026</span>
   <ul class="nav-links">
     <li><a href="#inflation">The Problem</a></li>
     <li><a href="#gap">The Gap</a></li>
@@ -32,7 +32,7 @@
     </div>
     <div class="meta-item">
       <span class="meta-label">Published</span>
-      <span class="meta-value">2025</span>
+      <span class="meta-value">2026</span>
     </div>
     <div class="meta-item">
       <span class="meta-label">Reading Time</span>
@@ -362,7 +362,7 @@
 
     <div class="pull-quote reveal">
       <p>The brands that will define the next decade are not those that master AI targeting. They are those that build genuine customer relationships that AI cannot manufacture, and that learn to read those relationships in the data that cannot be inflated.</p>
-      <cite>Nico Lafakis, 2025</cite>
+      <cite>Nico Lafakis, 2026</cite>
     </div>
 
     <p>The AI era in marketing has not made brand-building harder. It has made the evidence of poor brand-building more expensive to hide. When every paid channel can be gamed, every metric inflated, and every impression manufactured, the only measurements that retain their honesty are the ones that require a real customer to take a genuine action of their own volition.</p>
@@ -375,9 +375,10 @@
 <footer>
   <div>
     <div class="footer-author">Nico Lafakis</div>
-    <div class="footer-date">Published 2025 — All Rights Reserved</div>
+    <div class="footer-date">Published 2026 — All Rights Reserved</div>
+    <a class="footer-linkedin" href="https://www.linkedin.com/in/nlafakis" target="_blank">LinkedIn</a>
   </div>
-  <p class="footer-note">This report is part of an ongoing series examining how emerging technologies are reshaping economic systems, human behavior, and the nature of value creation. All statistics cited are sourced from publicly available research published between 2024 and 2025.</p>
+  <p class="footer-note">This report is part of an ongoing series examining how emerging technologies are reshaping economic systems, human behavior, and the nature of value creation. All statistics cited are sourced from publicly available research published between 2024 and 2026.</p>
 </footer>
 
 <script src="/main.js"></script>
